update：配置css代码校验

--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -12,5 +12,8 @@
   "repository": {
     "type": "git",
     "url": "git@toscode.gitee.com:fast_dev/yy-ui.git"
+  },
+  "dependencies": {
+    "stylelint-order": "^6.0.3"
   }
 }
