--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "stylelint-order": "^6.0.3",
     "unplugin-vue-macros": "^2.0.0",
     "vite": "^4.2.1",
     "vitepress": "^1.0.0-alpha.65",
