--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -7,5 +7,8 @@
   "module": "index.ts",
   "peerDependencies": {
     "vue": "^3.2.0"
+  },
+  "dependencies": {
+    "stylelint-order": "^6.0.3"
   }
 }
