--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-vue": "^9.1.1",
     "jsonc-eslint-parser": "^2.1.0",
     "prettier": "^2.7.1",
+    "stylelint-order": "^6.0.3",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
