--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -14,6 +14,7 @@
     "url": "git@toscode.gitee.com:fast_dev/yy-ui.git"
   },
   "dependencies": {
-    "@yy/tokens": "^0.1.0"
+    "@yy/tokens": "^0.1.0",
+    "stylelint-order": "^6.0.3"
   }
 }
