--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -26,6 +26,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "stylelint-order": "^6.0.3"
   }
 }
