--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "eslint": "^8.33.0",
     "lerna": "^6.1.0",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "stylelint": "15.6.0"
   }
 }
