--- a/packages/stylelint-config/package.json
+++ b/packages/stylelint-config/package.json
@@ -25,11 +25,10 @@
   },
   "dependencies": {
     "stylelint": "^15.6.0",
-    "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-recess-order": "^4.0.0",
+    "stylelint-scss": "4.6.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
-    "stylelint-order": "^6.0.3",
-    "stylelint-scss": "^4.6.0"
+    "postcss": "^8.4.23",
+    "postcss-scss": "^4.0.6"
   }
 }
