--- a/packages/yy-ui/package.json
+++ b/packages/yy-ui/package.json
@@ -12,7 +12,6 @@
     "test": "node ./__tests__/yy.test.js"
   },
   "dependencies": {
-    "@yy/components": "^0.1.0",
-    "stylelint-order": "^6.0.3"
+    "@yy/components": "^0.1.0"
   }
 }
