update：配置监听样式改变自动打包

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build"
   ],
   "scripts": {
-    "build:theme": "lerna run --scope @yy/theme build",
+    "theme:prod": "lerna run --scope @yy/theme build",
+    "theme:dev": "lerna run --scope @yy/theme dev",
     "docs:dev": "lerna run --scope @yy/docs docs:dev",
     "build": "lerna run --scope @yy/build build"
   },
