--- a/docs/package.json
+++ b/docs/package.json
@@ -1,23 +1,26 @@
 {
   "name": "@yy/docs",
   "version": "0.1.0",
-  "description": "> TODO: description",
   "author": "陈羽云 <897908015@qq.com>",
-  "homepage": "",
-  "license": "ISC",
+  "type": "module",
   "scripts": {
-    "docs:dev": "vitepress dev .",
-    "docs:build": "vitepress build .",
-    "docs:serve": "vitepress serve ."
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "vue-router": "4.2.4",
+    "vue": "^3.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.5.0",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "stylelint-order": "^6.0.3",
-    "unplugin-vue-macros": "^2.0.0",
-    "vite": "^4.2.1",
-    "vitepress": "^1.0.0-alpha.65",
-    "vue": "^3.2.47",
-    "unplugin-vue-components": "^0.25.1",
-    "fast-glob": "^3.3.1"
+    "highlight.js": "^11.8.0",
+    "marked": "^7.0.3",
+    "sass": "^1.66.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "vue-tsc": "^1.8.5"
   }
 }
