--- a/docs/package.json
+++ b/docs/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.66.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vue-tsc": "^1.8.5"
+    "vue-tsc": "^1.8.5",
+    "fast-glob": "^3.3.1"
   }
 }
